# ollama-image-generator

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_local.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: Gallery.vue  GenerateForm.vue  ImageModal.vue  ModelPicker.vue
image_service/: db.py  enhance.py  models.py  ollama_client.py  server.py  styles.py
image_service/migrations/: 001_init.sql  002_add_steps.sql
